Changing course name/number in title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>15-112: Fundamentals of Programming</title>
+  <title>15-110: Principles of Computing</title>
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/reset.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/112.css">
