Fixing some URL stuff with jekyll so this can be hosted

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>15-110: Principles of Computing</title>
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/112.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/112-highlight-style.css">
-  <script src="{{ site.baseurl }}/js/jquery-2.1.4.min.js"></script>
-  <script src="{{ site.baseurl }}/js/highlight.pack.js"></script>
-  <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
-  <script id="112-script" src="{{ site.baseurl }}/js/112.js"></script>
+  <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/112.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/112-highlight-style.css">
+  <script src="{{ site.url }}/js/jquery-2.1.4.min.js"></script>
+  <script src="{{ site.url }}/js/highlight.pack.js"></script>
+  <script src="{{ site.url }}/js/bootstrap.min.js"></script>
+  <script id="112-script" src="{{ site.url }}/js/112.js"></script>
   <base target="_self">
 </head>
 <body>
