--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>15-110: Principles of Computing</title>
-  <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="{{ "/css/reset.css" | relative_url }}">
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/112.css">
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/112-highlight-style.css">
