--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,14 +3,14 @@
 <head>
   <title>15-110: Principles of Computing</title>
   <!-- 1 -->
-  <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/112.css">
-  <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/112-highlight-style.css">
-  <script src="{{ site.url }}/js/jquery-2.1.4.min.js"></script>
-  <script src="{{ site.url }}/js/highlight.pack.js"></script>
-  <script src="{{ site.url }}/js/bootstrap.min.js"></script>
-  <script id="112-script" src="{{ site.url }}/js/112.js"></script>
+  <link rel="stylesheet" type="text/css" href="{{ "/css/reset.css" | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ "/css/bootstrap.min.css" | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ "/css/112.css" | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ "/css/112-highlight-style.css" | relative_url }}">
+  <script src="{{ "/js/jquery-2.1.4.min.js" | relative_url }}"></script>
+  <script src="{{ "/js/highlight.pack.js" | relative_url }}"></script>
+  <script src="{{ "/js/bootstrap.min.js" | relative_url }}"></script>
+  <script id="112-script" src="{{ "/js/112.js" | relative_url }}"></script>
   <base target="_self">
 </head>
 <body>
